# Bitonic_sort

./: .gitignore  CMakeLists.txt  README.md  answ_test.txt  benchmark.py  perf.data  perf.data.old
.github/workflows/: ci.yml
include/: utils.hpp
sorting_on_CPU/: CMakeLists.txt
sorting_on_CPU/include/: utils.hpp
sorting_on_CPU/src/: main.cpp
sorting_on_CPU/tests/: CMakeLists.txt  generator.py
sorting_on_CPU/tests/answ/: 1.txt  2.txt  3.txt
sorting_on_CPU/tests/data/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
sorting_on_CPU/tests/end_to_end/: CMakeLists.txt  end_to_end.sh
sorting_on_CPU/tests/end_to_end/answ/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
sorting_on_CPU/tests/end_to_end/data/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
sorting_on_GPU/: CMakeLists.txt
sorting_on_GPU/include/: bitonic.hpp  buffer.hpp  gpu_context.hpp  kernel.cl  kernel.hpp  utils_gpu.hpp
sorting_on_GPU/src/: main.cpp
sorting_on_GPU/tests/end_to_end/: CMakeLists.txt  end_to_end.sh
sorting_on_GPU/tests/end_to_end/answ/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
sorting_on_GPU/tests/end_to_end/data/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/: CMakeLists.txt
tests/answ/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/data/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/end_to_end/: CMakeLists.txt  end_to_end.sh  generator.py
tests/end_to_end/answ/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/end_to_end/data/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
